# Yave

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  global.h  imgui.ini  install.sh  installer.sh  main.cpp  makefile  makefile_old(but_gold)  manifestFile  readme-fedora.md  readme-manjaro.md  readme-mint.md  readme-windows.md  version_config.h.in  yave  yave_config.h
.local/: README.md
.local/include/glad/: glad.h
.local/src/: glad.c
API/: Camera.h  Listener.h  Object.h  render.h  yave.h
additional/glad/: CMakeLists.txt
additional/linux/: README.md
additional/windows/: REDME.md  setup.bat
animations/: snake.dae
animations/Flair/: Flair.dae
animations/Ymca_Dance/: Ymca_Dance.dae
lib/: Animation.h  Animator.h  Assimp_glm_helpers.h  Bone.h  Camera.h  Listener.h  Mesh.h  Model.h  Noise.h  Object.h  Shader.h  TextureManager.h  TextureManager.hpp  YAVE_input.h  global_objects.h
lib/animations/: Bone.h  Model.h
lib/lone/: README.md  eventMachine.hpp  main.hpp
lib/lua/: eventMachine.hpp
lua/: main.lua
main/: config.cpp  config.h  config_main.h  render.cpp  render.h
models/: model.fbx  model.gltf
shaders/: amodel.fs  amodel.vs  base.fragment.glsl  base.vertex.glsl  model.fs  model.vs
shaders/animations/: anim_model.fs  anim_model.vs
shaders/models/: model.fs
src/: Camera.cpp  Listener.cpp  Object.cpp  Shader.cpp  YAVE_input.cpp  shaders.cpp
src/YAVE/: SimplexNoise.cpp  YAVE_input.cpp
src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
